NAS-125716: Misaligned icons in menues (fix) (#9369)

--- a/src/assets/styles/other/_material-reduction.scss
+++ b/src/assets/styles/other/_material-reduction.scss
@@ -863,3 +863,11 @@ body .mat-calendar-previous-button::after,
 body .mat-calendar-next-button::after {
   margin: 10px;
 }
+
+.mat-mdc-menu-item {
+  > span {
+    align-items: center;
+    display: flex;
+    width: 100%;
+  }
+}
